--- a/SiteEnergiaR/WebContent/hidrogenio.html
+++ b/SiteEnergiaR/WebContent/hidrogenio.html
@@ -27,7 +27,7 @@
 
 		<div  class="trocaCor">
 			<div class="img_home">
-				<img id="usina" src="Imagem/usina.png" alt="usina">
+				<img id="usina" src="Imagem/usina1.jpg" alt="usina">
 				<p>
 						<b class="b1">O que é Hidrogênio?</b>
 				</p>
@@ -67,7 +67,7 @@
 						A temperatura de operação, o eletrólito e os catalisadores utilizados, caracterizam os diferentes tipos de células a combustível.</p>
 
 
-					<p>Existem seis principais tipos de células:</p>
+					<p>Existem cinco principais tipos de células:</p>
 
 
 
@@ -78,34 +78,32 @@
 
 
 
-						<table  width=100% height=200% ALIGN=center>
+						<table  width=100% height=100% ALIGN=center>
 								<tr height=30%>
 									<td align=center>
-									<p id="Membrana">PEMFC <div class="corLista"> (Célula Combustível de Membrana Trocadora de Prótons)</div></p>
-									<img id="PEMFC" src="Imagem/menbrana2.jpg" alt="menbrana">
+									<p id="Membrana">CCMPP <div class="corLista"> (Células de combustível com membrana de permuta protônica)</div></p>
+									<img id="ccmpp" src="Imagem/ccmpp.gif" alt="ccmpp">
 									</td>
-									<td align=center valign=top>
-									<p id="Alcalina">AFC <div class="corLista">(Célula Combustível Alcalina)</div></p>
-									<img id="AFC" src="Imagem/celula-de-combustivel.jpg" alt="AFC">
+									<td align=center>
+									<p id="Alcalina">CCAF <div class="corLista">(Células de combustível ácido fosfóricas)</div></p>
+									<img id="ccaf" src="Imagem/ccaf.gif" alt="ccaf">
 									</td>
 								</tr>
-								<tr height=70% >
-									<td valign=center align=center>
-									<p id="Metanol">DMFC <div class="corLista">(Célula Combustível de Metanol Direto)</div></p>
-									<img id="DMFC" src="Imagem/DMFC.png" alt="DMFC">
+								<tr height=30% >
+									<td  align=center>
+									<p id="Metanol">CCA <div class="corLista">(Células de combustível alcalinas)</div></p>
+									<img id="cca" src="Imagem/cca.gif" alt="cca">
 									</td>
-									<td valign=center align=center>
-									<p id="Ácido">PAFC <div class="corLista">(Célula Combustível de Ácido Fosfórico)</div></p>
-									<img id="PAFC" src="Imagem/PAFC.png" alt="PAFC">
 
+									<td align=center>
+									<p id="Ácido">CCCF <div class="corLista">(Células de combustível de carbonato fundido)</div></p>
+									<img id="cccf" src="Imagem/cccf.gif" alt="cccf">
 									</td>
 								</tr>
-								<tr height=100% >
-									<td valign=center align=center>
-									<p id="Carbonato">MCFC <div class="corLista">(Célula Combustível de Carbonato Fundido)</div></p>
-									</td>
-									<td valign=center align=center >
-									<p id="ÓxidoM">SOFC <div class="corLista">(Célula Combustível de Óxido Sólido)</div></p>
+								<tr height=30% >
+									<td align=center>
+									<p id="Carbonato">CCOS <div class="corLista">(Células de combustível de óxido sólido)</div></p>
+									<img id="ccos" src="Imagem/ccos.gif	" alt="ccos">
 									</td>
 								</tr>
 						</table>
@@ -142,6 +140,7 @@
 
 		<!--Produção hidrogenio  https://www.todamateria.com.br/hidrogenio/-->
 		<!-- https://www.profpc.com.br/C%C3%A9lula_combust%C3%ADvel.htm-->
+		<!--https://www.clariant.com/pt/Business-Units/Catalysts/Syngas-Catalysts/Fuel-Cell-Technologies-->
 
 
 		</body>
