Projeto - shit in th table
Alinhamento da tabela concluído
falta  o resto..

--- a/SiteEnergiaR/WebContent/Hidrogenio.html
+++ b/SiteEnergiaR/WebContent/Hidrogenio.html
@@ -66,49 +66,74 @@
 					<p>Os tipos de células a combustível podem variar, mas elas funcionam com base nos mesmos fundamentos.
 						A temperatura de operação, o eletrólito e os catalisadores utilizados, caracterizam os diferentes tipos de células a combustível.</p>
 
-
 					<p>Existem cinco principais tipos de células:</p>
 
-
-
-
-
-
-
-
-
-
-						<table  width=100% height=100% ALIGN=center>
+						<table  width=100% height=100% ALIGN=center cellspacing="10%" cellpadding="10%">
 								<tr height=30%>
-									<td align=center>
-									<p id="Membrana">CCMPP <div class="corLista"> (Células de combustível com membrana de permuta protônica)</div></p>
-									<img id="ccmpp" src="Imagem/ccmpp.gif" alt="ccmpp">
+									<td >
+										<a href=#Titulocelulas1 title=CCMPP><img id="ccmpp" src="Imagem/ccmpp.gif" alt="ccmpp"></a>
 									</td>
-									<td align=center>
-									<p id="Alcalina">CCAF <div class="corLista">(Células de combustível ácido fosfóricas)</div></p>
-									<img id="ccaf" src="Imagem/ccaf.gif" alt="ccaf">
+									<td >
+										<a href=#Titulocelulas3 title=CCAF><img id="ccaf" src="Imagem/ccaf.gif" alt="ccaf"></a>
 									</td>
 								</tr>
 								<tr height=30% >
-									<td  align=center>
-									<p id="Metanol">CCA <div class="corLista">(Células de combustível alcalinas)</div></p>
-									<img id="cca" src="Imagem/cca.gif" alt="cca">
+									<td  >
+										<a href=#Titulocelulas2 title=CCA><img id="cca" src="Imagem/cca.gif" alt="cca"></a>
 									</td>
-
-									<td align=center>
-									<p id="Ácido">CCCF <div class="corLista">(Células de combustível de carbonato fundido)</div></p>
-									<img id="cccf" src="Imagem/cccf.gif" alt="cccf">
+									<td >
+										<a href=#Titulocelulas4 title=CCCF><img id="cccf" src="Imagem/cccf.gif" alt="cccf"></a>
 									</td>
 								</tr>
 								<tr height=30% >
-									<td align=center>
-									<p id="Carbonato">CCOS <div class="corLista">(Células de combustível de óxido sólido)</div></p>
-									<img id="ccos" src="Imagem/ccos.gif	" alt="ccos">
+									<td >
+										<a href=#Titulocelulas5 title=CCOS><img id="ccos" src="Imagem/ccos.gif	" alt="ccos"></a>
 									</td>
 								</tr>
 						</table>
+		</div>
 
-
+		<div class="divCelulas">
+			<p>
+					<b id="Titulocelulas1">Células de combustível com membrana de permuta protônica (CCMPP)</b>
+			</p>
+			<p class="textoCelulas">
+					A célula de combustível com membrana de permuta protônica apresenta a vantagem da sua simplicidade de funcionamento.
+					O eletrólito nesta célula de combustível é uma membrana de permuta iônica (polímero ácido sulfônico fluorizado ou outro polímero similar) que é boa condutora de prótons do ânodo para o cátodo.
+			</p>
+			<br>
+			<p>
+					<b id="Titulocelulas2">Células de combustível alcalinas (CCA)</b>
+			</p>
+			<p class="textoCelulas">
+					Neste tipo de células de combustível, a redução do oxigênio no cátodo é mais rápida em eletrólitos alcalinos,
+					comparativamente com os ácidos e, devido a isso, existe a possibilidade da utilização de metais não nobres neste tipo de células [Larminie, 2002].
+			</p>
+			<br>
+			<p>
+					<b id="Titulocelulas3">Células de combustível ácido fosfóricas (CCAF)</b>
+			</p>
+			<p class="textoCelulas">
+					As células de combustível ácido fosfóricas foram as primeiras a ser produzidas comercialmente e apresentam uma ampla aplicação a nível mundial.
+					Muitas unidades de 200 kW, produzidas pela empresa “International Fuel Cells Corporation” estão instaladas nos Estados Unidos e na Europa [Larminie, 2002].
+			</p>
+			<br>
+			<p>
+					<b id="Titulocelulas4">Células de combustível de carbonato fundido (CCCF)</b>
+			</p>
+			<p class="textoCelulas">
+					A célula de combustível de carbonato fundido utiliza como eletrólito uma combinação de carbonatos alcalinos (Na, K, Li), que são estabilizados num suporte de LiAlO2.
+					Este tipo de células de combustível funciona na gama de temperaturas entre 600 e 700 ºC, para as quais os carbonatos alcalinos formam um sal altamente condutor de íons (íon carbonato).
+					Para temperaturas elevadas pode-se utilizar o níquel como catalisador no ânodo e óxido de níquel no cátodo, não sendo necessária a utilização de metais nobres [Hirschenhofer et al., 1998].
+			</p>
+			<br>
+			<p>
+					<b id="Titulocelulas5">Células de combustível de óxido sólido (CCOS)</b>
+			</p>
+			<p class="textoCelulas">
+					As células de combustível de óxido sólido funcionam na gama de temperaturas entre os 600 e os 1000 ºC,
+					possibilitando assim velocidades de reação elevadas sem a utilização de catalisadores nobres [Hirschenhofer et al., 1998]. O metano pode ser utilizado diretamente, não sendo necessária a utilização de uma unidade de reformação externa. No entanto, os materiais cerâmicos que constituem estas células acarretam dificuldades adicionais na sua utilização, envolvendo custos de fabrico elevados e sendo necessários muitos equipamentos extra para que a célula produza energia elétrica. [Larminie, 2002]
+			</p>
 
 		</div>
 
@@ -126,7 +151,13 @@
 				pois estes requerem características não obtidas com outros combustíveis, tais como: o baixo peso, a compactação e a capacidade de grande armazenamento de energia.
 				Quando utilizado em células a combustível, a água que resulta do processo é consumida pelos astronautas!</P>
 				<b>
+
+				<p>Além da NASA, as aplicações mais importantes para as células de combustível são as centrais de produção de eletricidade 
+				estacionárias e de distribuição, veículos elétricos motorizados e equipamentos elétricos portáteis.</p>
+
+
 		</div>
+
 
 
 
