Shit in the table

--- a/SiteEnergiaR/WebContent/Hidrogenio.html
+++ b/SiteEnergiaR/WebContent/Hidrogenio.html
@@ -152,16 +152,12 @@
 				Quando utilizado em células a combustível, a água que resulta do processo é consumida pelos astronautas!</P>
 				<b>
 
-				<p>Além da NASA, as aplicações mais importantes para as células de combustível são as centrais de produção de eletricidade 
+				<p>Além da NASA, as aplicações mais importantes para as células de combustível são as centrais de produção de eletricidade
 				estacionárias e de distribuição, veículos elétricos motorizados e equipamentos elétricos portáteis.</p>
 
+				<img id="sustentavel" src="Imagem/download.jpg" alt="fundo">
 
 		</div>
-
-
-
-
-
 
 
 		<footer>
