--- a/SiteEnergiaR/WebContent/hidrogenio.html
+++ b/SiteEnergiaR/WebContent/hidrogenio.html
@@ -1,13 +1,13 @@
 <DOCTYPE html>
-<html charset="UTF-8">
-	<head lang="pt-br">
+<html>
+	<head>
 		<title>Energia Hidrogênio</title>
 		<link rel="stylesheet" href="CSS/hidrogenio.css">
 		<link rel="stylesheet" href="CSS/MenuHF.css">
 
 	</head>
 	<body>
-
+	<!--Menu-->
 		<div class="logo">
 			<img src="Imagem/Energy_logo.png">
 			<ul>
@@ -19,10 +19,10 @@
 				<li><a href="Geotermica.html">GEOTERMICA</a></li>
 				<li><a href="Ondas.html">ONDAS</a></li>
 				<li><a href="#">FORMULARIO</a></li>
-				<li><a href="#">APP</a></li>
+				<li><a href="app.html">APP</a></li>
 			</ul>
 		</div>
-
+		<!-- Divisão em Branco - div abaixo do menu texto e imagem a direita-->
 		<h1><center>Energia de hidrogênio</center></h1>
 
 		<div  class="trocaCor">
@@ -45,9 +45,9 @@
 			</div>
 		</div>
 
+		<!-- Divisão em Verde - gif e texto com espaçamento de linhas em css-->
 
-
-		<div class="trocaCorTeste">
+		<div class="trocaCor2">
 			<img id="clicoh2o" src="Imagem/videoclico.gif" alt="video">
 
 			<h3 class="tituloDiv2">Como é gerado o Combustível?</h3>
@@ -58,17 +58,17 @@
 					</p>
 
 		</div>
+		<!-- Divisão em Branco - texo e tabela para imagens clicaveis-->
+		<div class="trocaCor1">
+						<div class="textoCor1">
+							<h3 >Tipos de células de energia:</h3>
 
-<div class="trocaCor1">
+							<p>Os tipos de células a combustível podem variar, mas elas funcionam com base nos mesmos fundamentos.
+								A temperatura de operação, o eletrólito e os catalisadores utilizados, caracterizam os diferentes tipos de células a combustível.</p>
 
-				<h3 >Tipos de células de energia:</h3>
-
-					<p>Os tipos de células a combustível podem variar, mas elas funcionam com base nos mesmos fundamentos.
-						A temperatura de operação, o eletrólito e os catalisadores utilizados, caracterizam os diferentes tipos de células a combustível.</p>
-
-					<p>Existem cinco principais tipos de células:</p>
-
-						<table  width=100% height=100% ALIGN=center cellspacing="10%" cellpadding="10%">
+							<h3><strong>Existem cinco principais tipos de células:</strong></h3>
+						</div>
+						<table  width=100% height=100% ALIGN=center cellspacing="10%" cellpadding="40%">
 								<tr height=30%>
 									<td >
 										<a href=#Titulocelulas1 title=CCMPP><img id="ccmpp" src="Imagem/ccmpp.gif" alt="ccmpp"></a>
@@ -92,7 +92,7 @@
 								</tr>
 						</table>
 		</div>
-
+		<!--Divisão em Verde - com link a "trocaCor1"-->
 		<div class="divCelulas">
 			<p>
 					<b id="Titulocelulas1">Células de combustível com membrana de permuta protônica (CCMPP)</b>
@@ -136,7 +136,7 @@
 			</p>
 
 		</div>
-
+		<!--Divisão em cinza - Texto e Imagem-->
 		<div class="trocaCor3">
 			<h3>Curiosidades</h3>
 			   <p>Um exemplo do potencial energético do Hidrogênio está na fonte de energia do Sol - compõe 30% da massa solar.
