--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -10,15 +10,15 @@
   	<!--Menu-->
   		<div class="logo">
   			<img src="Imagem/Energy_logo.png">
-  			<ul>
+        <ul>
   				<li><a href="Home.html">HOME</a></li>
   				<li><a href="Solar.html">SOLAR</a></li>
   				<li><a href="Eolica.html">EOLICA</a></li>
-  				<li><a href="#">BIOMASSA</a></li>
+  				<li><a href="Biomassa.html">BIOMASSA</a></li>
   				<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
   				<li><a href="Geotermica.html">GEOTERMICA</a></li>
   				<li><a href="Ondas.html">ONDAS</a></li>
-  				<li><a href="#">FORMULARIO</a></li>
+  				<li><a href="Formulario.html">FORMULARIO</a></li>
   				<li><a href="app.html">APP</a></li>
   			</ul>
   		</div>
