--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -16,12 +16,12 @@
 			<li><a href="Home.html">HOME</a></li>
 			<li><a href="Solar.html">SOLAR</a></li>
 			<li><a href="Eolica.html">EOLICA</a></li>
-			<li><a href="#">BIOMASSA</a></li>
+			<li><a href="Biomassa.html">BIOMASSA</a></li>
 			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
 			<li><a href="Geotermica.html">GEOTERMICA</a></li>
 			<li><a href="Ondas.html">ONDAS</a></li>
-			<li><a href="#">FORMULARIO</a></li>
-			<li><a href="#">APP</a></li>
+			<li><a href="Formulario.html">FORMULARIO</a></li>
+			<li><a href="app.html">APP</a></li>
 		</ul>
 	</div>
 
