--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -4,7 +4,7 @@
 		<title>Pagina Inicial</title>
 
 		<link rel="stylesheet" href="CSS/MenuHF.css">
-		<link rel="stylesheet" href="CSS/HomeHF.css">
+		<link rel="stylesheet" href="CSS/Paginas.css">
 
 	</head>
 
