--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Pagina Inicial</title>
 		<link rel="stylesheet" href="CSS/MenuHF.css">
-		<link rel="stylesheet" href="CSS/OndasHF.css">
+		<link rel="stylesheet" href="CSS/Paginas.css">
 
 	</head>
 
@@ -26,7 +26,7 @@
 
 		<h1><center>Energia das Ondas</center></h1>
 
-	<div  class="trocaCor">
+	<div  class="first">
 		<img id="onda1" src="Imagem/Ondas1.jpg" alt="Energia das Ondas">
 		<p><b>Definição:</b></p>
 		<p>A energia das ondas ou ondomotriz, provém do aproveitamento das ondas oceânicas. É uma energia "limpa", isto é, sem quaisquer custos para o ambiente</p>
@@ -38,7 +38,7 @@
 
 	</div>
 
-	<div class="trocaCor2">
+	<div class="second">
 		<img id="onda2" src="Imagem/Ondas2.jpg" alt="Energia das Ondas">
 		<p><b>Tecnologia:</b></p>
 		<p>A tecnologia Pelamis afigura-se a uma cobra articulada que balança à medida que as ondas percorrem o seu comprimento.
