--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -4,7 +4,7 @@
 		<title>Pagina Energia Solar</title>
 		<!-- Link para os arquivos Css -->
 		<link rel="stylesheet" href="CSS/MenuHF.css">
-		<link rel="stylesheet" href="CSS/SolarHF.css">
+		<link rel="stylesheet" href="CSS/Paginas.css">
   </head>
 
 	<body>
@@ -98,7 +98,7 @@
 			</center>
 	</div>
 	<!-- Divisão especial aumentado o tamanho da DIV para caber o texto Div cinza -->
-	<div  id="trocaCor_Solar2">
+	<div  class="trocaCor_Solar2">
 		<img id="solar_6" src="Imagem/Solar_6.gif" alt="Solar_Gif_6">
 	</div>
 	<div  class="trocaCor_Solar2">
