--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -4,7 +4,7 @@
 		<title>Pagina Energia Geotérmica</title>
 
     <link rel="stylesheet" href="CSS/MenuHF.css">
-		<link rel="stylesheet" href="CSS/GeotermicaHF.css">
+		<link rel="stylesheet" href="CSS/Paginas.css">
 
 	</head>
 
@@ -53,23 +53,23 @@
 
 	<div class="trocaCor2">
 		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
-		<p class="b2">
+		<p class="b1">
 			<b>
 				Usinas Geotérmicas:
 			</b>
 		</p>
-		<p class="a2">
+		<p class="a1">
 			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
 			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
 			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
 			geradores de turbina, produzindo assim, a eletricidade.
 		</p>
-		<p class="b2">
+		<p class="b1">
 			<b>
 				Transformação em energia:
 			</b>
 		</p>
-		<p class="a2">
+		<p class="a1">
 			O vapor de reservatórios geotérmicos fornece a energia que alimenta os geradores de turbina.<br>
 			A água geotérmica usada é depois reenviada ao reservatório através de um poço de injeção,<br>
 			para ser reaquecida, para assim manter a pressão, e suportar o reservatório.<br>
@@ -79,12 +79,12 @@
 
 	<div class="trocaCor">
 		<img id="Geotermica_3" src="Imagem\Geotermica_3.png" alt="Formas_EnergiaGeo">
-		<p class="b3">
+		<p class="b1">
 			<b>
 				Formas da energia Geométrica:
 			</b>
 		</p>
-		<p class="a3">
+		<p class="a1">
 			<strong>Utilização direta:</strong> reservatórios geotérmicos de temperaturas baixas moderadas (20ºC - 150ºC)<br>
 			podem ser aproveitadas diretamente para fornecer calor para a indústria, aquecimento ambiente, termas e outros<br>
 			aproveitamentos comerciais.<br><br>
@@ -97,12 +97,12 @@
 
 	<div class="trocaCor3">
 		<img id="Geotermica_4" src="Imagem\Geotermica_4.png" alt="Vantagens">
-		<p class="b4">
+		<p class="b1">
 			<b>
 				Vantagens:
 			</b>
 		</p>
-		<p class="a4">
+		<p class="a1">
 			Menos poluição, proporcionando um ambiente energético alternativo, que evite a queima de combustíveis fósseis além<br>
 			da Pequena quantidade de solo necessário para construir centrais geotérmicas.<br>
 			Contra outros tipos de fontes de energia renováveis, como energia eólica ou da energia solar, a energia geotérmica<br>
@@ -111,12 +111,12 @@
 			para reduzir as importações de combustíveis convencionais.
 		</p>
 		<img id="Geotermica_5" src="Imagem\Geotermica_5.png" alt="Desvantagens">
-		<p class="b4">
+		<p class="b1">
 			<b>
 				Desvantagens:
 			</b>
 		</p>
-		<p class="a4">
+		<p class="a1">
 			Embora a energia geotérmica seja uma energia menos poluente, se retirada de maneira irregular pode causar danos ao<br>
 			planeta, alterando assim sua geologia. Dessa forma, além do cuidado necessário com a perfuração do solo, a água<br>
 			encontrada abaixo da superfície terrestre deve ser tratada antes de ser lançada nos rios e nos mares, uma vez que<br>
@@ -131,12 +131,12 @@
 
 	<div class="trocaCor">
 		<img id="Geotermica_6" src="Imagem\Geotermica_6.png" alt="Brasil">
-		<p class="b5">
+		<p class="b1">
 			<b>
 				Brasil e o Mundo:
 			</b>
 		</p>
-		<p class="a5">
+		<p class="a1">
 			<strong>Os três países com maior produção de energia geotérmica no mundo são:</strong> os Estados Unidos, as Filipinas e a Indonésia.<br>
 			Além deles, outros países têm optado pela produção de energia geotérmica, tais quais a China, Japão, Chile, México,<br>
 			França, Alemanha, Suíça, Hungria, Islândia.<br>
