--- a/SiteEnergiaR/WebContent/Hidrogenio.html
+++ b/SiteEnergiaR/WebContent/Hidrogenio.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Energia Hidrogênio</title>
-		<link rel="stylesheet" href="CSS/hidrogenio.css">
 		<link rel="stylesheet" href="CSS/MenuHF.css">
+		<link rel="stylesheet" href="CSS/Paginas.css">
 
 	</head>
 	<body>
@@ -25,21 +25,21 @@
 		<!-- Divisão em Branco - div abaixo do menu texto e imagem a direita-->
 		<h1><center>Energia de hidrogênio</center></h1>
 
-		<div  class="trocaCor">
+		<div  class="introducao">
 			<div class="img_home">
 				<img id="usina" src="Imagem/usina1.jpg" alt="usina">
 				<p>
-						<b class="b1">O que é Hidrogênio?</b>
+						<b class="txt2">O que é Hidrogênio?</b>
 				</p>
-				<p class="a1">
+				<p class="txt1">
 						O Hidrogênio é um elemento químico abundante no Universo, embora o hidrogênio elementar seja raro na Terra.
 					   Este é produzido a partir de processos industriais, entre eles o uso de hidrocarbonetos.
 					   O Hidrogênio é um gás (em estado normal) inodoro, incolor e inflamável.
 				</p>
 				<p>
-						<b class="b1">Processo de extração:</b>
+						<b class="txt2">Processo de extração:</b>
 				</p>
-				<p class="a1">Um dos processos utilizados é chamado reforma a vapor que em altas temperaturas, com a utilização de catalisadores, consegue-se separar o hidrogênio de combustíveis como etanol e gás natural.
+				<p class="txt1">Um dos processos utilizados é chamado reforma a vapor que em altas temperaturas, com a utilização de catalisadores, consegue-se separar o hidrogênio de combustíveis como etanol e gás natural.
 					 Outro modo de separar o hidrogênio é por eletrólise, em que se divide a molécula de água ao meio, separando o hidrogênio e o oxigênio, por meio da passagem de uma corrente elétrica.</p>
 
 			</div>
@@ -47,7 +47,7 @@
 
 		<!-- Divisão em Verde - gif e texto com espaçamento de linhas em css-->
 
-		<div class="trocaCor2">
+		<div class="div2">
 			<img id="clicoh2o" src="Imagem/videoclico.gif" alt="video">
 
 			<h3 class="tituloDiv2">Como é gerado o Combustível?</h3>
@@ -59,7 +59,7 @@
 
 		</div>
 		<!-- Divisão em Branco - texo e tabela para imagens clicaveis-->
-		<div class="trocaCor1">
+		<div class="tiposCelulas">
 						<div class="textoCor1">
 							<h3 >Tipos de células de energia:</h3>
 
@@ -71,23 +71,23 @@
 						<table  width=100% height=100% ALIGN=center cellspacing="10%" cellpadding="40%">
 								<tr height=30%>
 									<td >
-										<a href=#Titulocelulas1 title=CCMPP><img id="ccmpp" src="Imagem/ccmpp.gif" alt="ccmpp"></a>
+										<a href=#Titulocelulas1 title=CCMPP><img class="ccmpp" src="Imagem/ccmpp.gif" alt="ccmpp"></a>
 									</td>
 									<td >
-										<a href=#Titulocelulas3 title=CCAF><img id="ccaf" src="Imagem/ccaf.gif" alt="ccaf"></a>
+										<a href=#Titulocelulas3 title=CCAF><img class="ccaf" src="Imagem/ccaf.gif" alt="ccaf"></a>
 									</td>
 								</tr>
 								<tr height=30% >
 									<td  >
-										<a href=#Titulocelulas2 title=CCA><img id="cca" src="Imagem/cca.gif" alt="cca"></a>
+										<a href=#Titulocelulas2 title=CCA><img class="ccmpp" src="Imagem/cca.gif" alt="cca"></a>
 									</td>
 									<td >
-										<a href=#Titulocelulas4 title=CCCF><img id="cccf" src="Imagem/cccf.gif" alt="cccf"></a>
+										<a href=#Titulocelulas4 title=CCCF><img class="ccaf" src="Imagem/cccf.gif" alt="cccf"></a>
 									</td>
 								</tr>
 								<tr height=30% >
 									<td >
-										<a href=#Titulocelulas5 title=CCOS><img id="ccos" src="Imagem/ccos.gif	" alt="ccos"></a>
+										<a href=#Titulocelulas5 title=CCOS><img class="ccmpp" src="Imagem/ccos.gif	" alt="ccos"></a>
 									</td>
 								</tr>
 						</table>
@@ -95,7 +95,7 @@
 		<!--Divisão em Verde - com link a "trocaCor1"-->
 		<div class="divCelulas">
 			<p>
-					<b id="Titulocelulas1">Células de combustível com membrana de permuta protônica (CCMPP)</b>
+					<b class="Titulocelulas">Células de combustível com membrana de permuta protônica (CCMPP)</b>
 			</p>
 			<p class="textoCelulas">
 					A célula de combustível com membrana de permuta protônica apresenta a vantagem da sua simplicidade de funcionamento.
@@ -103,7 +103,7 @@
 			</p>
 			<br>
 			<p>
-					<b id="Titulocelulas2">Células de combustível alcalinas (CCA)</b>
+					<b class="Titulocelulas">Células de combustível alcalinas (CCA)</b>
 			</p>
 			<p class="textoCelulas">
 					Neste tipo de células de combustível, a redução do oxigênio no cátodo é mais rápida em eletrólitos alcalinos,
@@ -111,7 +111,7 @@
 			</p>
 			<br>
 			<p>
-					<b id="Titulocelulas3">Células de combustível ácido fosfóricas (CCAF)</b>
+					<b class="Titulocelulas">Células de combustível ácido fosfóricas (CCAF)</b>
 			</p>
 			<p class="textoCelulas">
 					As células de combustível ácido fosfóricas foram as primeiras a ser produzidas comercialmente e apresentam uma ampla aplicação a nível mundial.
@@ -119,7 +119,7 @@
 			</p>
 			<br>
 			<p>
-					<b id="Titulocelulas4">Células de combustível de carbonato fundido (CCCF)</b>
+					<b class="Titulocelulas">Células de combustível de carbonato fundido (CCCF)</b>
 			</p>
 			<p class="textoCelulas">
 					A célula de combustível de carbonato fundido utiliza como eletrólito uma combinação de carbonatos alcalinos (Na, K, Li), que são estabilizados num suporte de LiAlO2.
@@ -128,7 +128,7 @@
 			</p>
 			<br>
 			<p>
-					<b id="Titulocelulas5">Células de combustível de óxido sólido (CCOS)</b>
+					<b class="Titulocelulas">Células de combustível de óxido sólido (CCOS)</b>
 			</p>
 			<p class="textoCelulas">
 					As células de combustível de óxido sólido funcionam na gama de temperaturas entre os 600 e os 1000 ºC,
@@ -137,7 +137,7 @@
 
 		</div>
 		<!--Divisão em cinza - Texto e Imagem-->
-		<div class="trocaCor3">
+		<div class="curiosidades">
 			<h3>Curiosidades</h3>
 			   <p>Um exemplo do potencial energético do Hidrogênio está na fonte de energia do Sol - compõe 30% da massa solar.
 			      É com a energia do hidrogênio que o Sol aquece a Terra, favorecendo a vida em nosso planeta.</P>
