--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -25,32 +25,36 @@
 		</div>
 
 	<!-- Divisão em Branco -->
-	<div  class="trocaCor">
-		<div class="img_solar">
-		<img id="solar_1" src="Imagem/Solar_1.png" alt="Solar_Desenho_1">
-	    <h1>
-	      <b>
-	        <center>
-	          Energia Solar
-	        </center>
-	      </b>
-	    </h1>
-	    <h1>
-	      <b>
-	        Funcionamento:
-	      </b>
-	    </h1>
-	    <p>
-	      A energia solar funciona através dos painéis que capturam a radiação solar através dos painéis fotovoltaicos onde está radiação é convertida em energia elétrica através de um conversor conectado junto a rede elétrica convencional.
-			</p>
-			<p>
-				Durante o dia esta energia é coletada e armazenada neste coletor que ao final do dia é utilizada na rede elétrica de sua residência como um gerador, utilizado quando se está sem energia, a posição das placas afetam o potencial de energia adquirida durante o dia, se estiver bem posicionada a energia coletada será melhor e terá um melhor desempenho em questão de duração e em caso de sobra de energia a mesma pode ser enviada para a fornecedora de energia fazendo que ganhe créditos.
-	    </p>
-			<p>
-				Outras questões podem afetar a coleta de energia solar, pela manhã a coleta é menor pois o sol está nascendo e a radiação de luz é menor, já na metade do dia é o momento onde o sol está em seu pico de radiação onde é possível coletar toda a energia para o dia todo onde se sobra energia a qual é creditada. Em dias de chuva ou nublados há também a coleta de energia, mas em pouca quantidade.
-			</p>
+	<div  class="primeiraDiv">
+
+		<div>
+			<img id="solar_1" src="Imagem/Solar_1.png" alt="Solar_Desenho_1">
 		</div>
+
+		<h1><b><center>Energia Solar</center></b></h1>
+
+		<h1><b>Funcionamento:</b></h1>
+
+		<p>
+			A energia solar funciona através dos painéis que capturam a radiação solar
+			através dos painéis fotovoltaicos onde está radiação é convertida em energia elétrica através de um conversor conectado junto a rede elétrica convencional.
+		</p>
+
+		<p>
+			Durante o dia esta energia é coletada e armazenada neste coletor que ao final do dia é utilizada na rede elétrica de sua
+			residência como um gerador, utilizado quando se está sem energia, a posição das placas afetam o potencial de energia adquirida durante o dia,
+			se estiver bem posicionada a energia coletada será melhor e terá um melhor desempenho em questão de duração e em caso de sobra de energia a mesma pode ser enviada para a fornecedora de energia fazendo que
+			ganhe créditos.
+		</p>
+
+		<p>
+			Outras questões podem afetar a coleta de energia solar, pela manhã a coleta é menor pois o sol está nascendo e a radiação de luz é menor,
+			já na metade do dia é o momento onde o sol está em seu pico de radiação onde é possível coletar toda a energia para o dia todo onde se sobra energia a
+			qual é creditada. Em dias de chuva ou nublados há também a coleta de energia, mas em pouca quantidade.
+		</p>
+
   </div>
+
 	<!-- Divisão em Verde -->
 	<div  id="trocaCor_Solar3">
 		<br>
