--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -8,6 +8,43 @@
   </head>
 
 	<body>
+		<!-- Slide Show -->
+		<div class="slideshow-container">
+
+				<div class="mySlides fade">
+					<div class="numbertext">1 / 5</div>
+					<img src="Imagem\hidrogenio.jpg" class="imgSlide">
+					<div class="text">Eolica1</div>
+				</div>
+
+				<div class="mySlides fade">
+					<div class="numbertext">2 / 5</div>
+					<img src="Imagem\solar.jpg" class="imgSlide">
+					<div class="text">Eolica2</div>
+				</div>
+
+				<div class="mySlides fade">
+					<div class="numbertext">3 / 5</div>
+					<img src="Imagem\hidrogenio.jpg" class="imgSlide">
+					<div class="text">Eolica3</div>
+				</div>
+
+				<div class="mySlides fade">
+					<div class="numbertext">4 / 5</div>
+					<img src="Imagem\eo4.jpg" class="imgSlide">
+					<div class="text">Eolica4</div>
+				</div>
+
+				<div class="mySlides fade">
+					<div class="numbertext">5 / 5</div>
+					<img src="Imagem\eo5.jpg" class="imgSlide">
+					<div class="text">Eolica5</div>
+				</div>
+
+		</div>
+
+
+
 		<!-- Menu -->
 		<div class="logo">
 			<img src="Imagem/Energy_logo.png">
@@ -132,7 +169,26 @@
 		</p>
 	</div>
 	<footer>
-
 	</footer>
+
+
+	<script>
+		var slideIndex = 0;
+		showSlides();
+
+		function showSlides() {
+			var i;
+			var slides = document.getElementsByClassName("mySlides");
+			for (i = 0; i < slides.length; i++) {
+			slides[i].style.display = "none";
+			}
+			slideIndex++;
+			if (slideIndex > slides.length) {slideIndex = 1}
+			slides[slideIndex-1].style.display = "block";
+			setTimeout(showSlides, 200000); // Change image every 2 seconds
+		}
+		</script>
+
+
   </body>
 </html>
