--- a/SiteEnergiaR/WebContent/hidrogenio.html
+++ b/SiteEnergiaR/WebContent/hidrogenio.html
@@ -161,9 +161,24 @@
 
 
 		<footer>
-
 		</footer>
 
+		<script>
+			var slideIndex = 0;
+			showSlides();
+
+			function showSlides() {
+			  var i;
+			  var slides = document.getElementsByClassName("mySlides");
+			  for (i = 0; i < slides.length; i++) {
+				slides[i].style.display = "none";
+			  }
+			  slideIndex++;
+			  if (slideIndex > slides.length) {slideIndex = 1}
+			  slides[slideIndex-1].style.display = "block";
+			  setTimeout(showSlides, 200000); // Change image every 2 seconds
+			}
+			</script>
 
 		<!--Produção hidrogenio  https://www.todamateria.com.br/hidrogenio/-->
 		<!-- https://www.profpc.com.br/C%C3%A9lula_combust%C3%ADvel.htm-->
