--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -10,39 +10,45 @@
 
 
       <!-- Slide Show -->
-      <div class="slideshow-container">
+  		<div class="slideshow-container">
 
-          <div class="mySlides fade">
-            <div class="numbertext">1 / 5</div>
-            <img src="Imagem\hidrogenio.jpg" class="imgSlide">
-            <div class="text">Eolica1</div>
-          </div>
+  				<div class="mySlides fade">
+  					<div class="numbertext">1 / 6</div>
+  					<img src="Imagem\onda.jpg" class="imgSlide">
+  					<div class="text">Ondas</div>
+  				</div>
 
-          <div class="mySlides fade">
-            <div class="numbertext">2 / 5</div>
-            <img src="Imagem\solar.jpg" class="imgSlide">
-            <div class="text">Eolica2</div>
-          </div>
+  				<div class="mySlides fade">
+  					<div class="numbertext">2 / 6</div>
+  					<img src="Imagem\solar.jpg" class="imgSlide">
+  					<div class="text">Solar</div>
+  				</div>
 
-          <div class="mySlides fade">
-            <div class="numbertext">3 / 5</div>
-            <img src="Imagem\hidrogenio.jpg" class="imgSlide">
-            <div class="text">Eolica3</div>
-          </div>
+  				<div class="mySlides fade">
+  					<div class="numbertext">3 / 6</div>
+  					<img src="Imagem\eolica.jpg" class="imgSlide">
+  					<div class="text">Eólica</div>
+  				</div>
 
-          <div class="mySlides fade">
-            <div class="numbertext">4 / 5</div>
-            <img src="Imagem\eo4.jpg" class="imgSlide">
-            <div class="text">Eolica4</div>
-          </div>
+  				<div class="mySlides fade">
+  					<div class="numbertext">4 / 6</div>
+  					<img src="Imagem\hidrogenio.jpg" class="imgSlide">
+  					<div class="text">Hidrogenio</div>
+  				</div>
 
-          <div class="mySlides fade">
-            <div class="numbertext">5 / 5</div>
-            <img src="Imagem\eo5.jpg" class="imgSlide">
-            <div class="text">Eolica5</div>
-          </div>
+  				<div class="mySlides fade">
+  					<div class="numbertext">5 / 6</div>
+  					<img src="Imagem\geotermica.jpg" class="imgSlide">
+  					<div class="text">Geotermica</div>
+  				</div>
 
-      </div>
+  				<div class="mySlides fade">
+  					<div class="numbertext">6 / 6</div>
+  					<img src="Imagem\biomassa.jpg" class="imgSlide">
+  					<div class="text">Biomassa</div>
+  				</div>
+
+  		</div>
 
   	<!--Menu-->
   		<div class="logo">
@@ -97,7 +103,7 @@
           slideIndex++;
           if (slideIndex > slides.length) {slideIndex = 1}
           slides[slideIndex-1].style.display = "block";
-          setTimeout(showSlides, 200000); // Change image every 2 seconds
+          setTimeout(showSlides, 10000); // Change image every 2 seconds
         }
         </script>
 
