arrumando menu HF

--- a/SiteEnergiaR/WebContent/Eolica.html
+++ b/SiteEnergiaR/WebContent/Eolica.html
@@ -57,7 +57,7 @@
 		<ul>
 			<li><a href="Home.html">HOME</a></li>
 			<li><a href="Solar.html">SOLAR</a></li>
-			<li><a href="Eolica.html">EOLICA</a></li>
+			<li><a class="active" href="Eolica.html">EOLICA</a></li>
 			<li><a href="Biomassa.html">BIOMASSA</a></li>
 			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
 			<li><a href="Geotermica.html">GEOTERMICA</a></li>
