--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -56,7 +56,7 @@
 	<div class="logo">
 		<img src="Imagem/Energy_logo.png">
 		<ul>
-			<li><a href="Home.html">HOME</a></li>
+			<li><a class="active" href="Home.html">HOME</a></li>
 			<li><a href="Solar.html">SOLAR</a></li>
 			<li><a href="Eolica.html">EOLICA</a></li>
 			<li><a href="Biomassa.html">BIOMASSA</a></li>
