--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -58,7 +58,7 @@
 			<li><a href="Biomassa.html">BIOMASSA</a></li>
 			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
 			<li><a href="Geotermica.html">GEOTERMICA</a></li>
-			<li><a href="Ondas.html">ONDAS</a></li>
+			<li><a class="active" href="Ondas.html">ONDAS</a></li>
 			<li><a href="Formulario.html">FORMULARIO</a></li>
 			<li><a href="app.html">APP</a></li>
 		</ul>
