--- a/SiteEnergiaR/WebContent/Solar.html
+++ b/SiteEnergiaR/WebContent/Solar.html
@@ -58,7 +58,7 @@
 			<img src="Imagem/Energy_logo.png">
 			<ul>
 				<li><a href="Home.html">HOME</a></li>
-				<li><a href="Solar.html">SOLAR</a></li>
+				<li><a class="active" href="Solar.html">SOLAR</a></li>
 				<li><a href="Eolica.html">EOLICA</a></li>
 				<li><a href="Biomassa.html">BIOMASSA</a></li>
 				<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
