--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -62,7 +62,7 @@
   				<li><a href="Geotermica.html">GEOTERMICA</a></li>
   				<li><a href="Ondas.html">ONDAS</a></li>
   				<li><a href="Formulario.html">FORMULARIO</a></li>
-  				<li><a href="app.html">APP</a></li>
+  				<li><a class="active" href="app.html">APP</a></li>
   			</ul>
   		</div>
   		<!-- Divisão em Branco - topo app-->
