--- a/SiteEnergiaR/WebContent/Biomassa.html
+++ b/SiteEnergiaR/WebContent/Biomassa.html
@@ -58,7 +58,7 @@
 			<li><a href="Home.html">HOME</a></li>
 			<li><a href="Solar.html">SOLAR</a></li>
 			<li><a href="Eolica.html">EOLICA</a></li>
-			<li><a href="Biomassa.html">BIOMASSA</a></li>
+			<li><a class="active" href="Biomassa.html">BIOMASSA</a></li>
 			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
 			<li><a href="Geotermica.html">GEOTERMICA</a></li>
 			<li><a href="Ondas.html">ONDAS</a></li>
