--- a/SiteEnergiaR/WebContent/Formulario.html
+++ b/SiteEnergiaR/WebContent/Formulario.html
@@ -62,7 +62,7 @@
 				<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
 				<li><a href="Geotermica.html">GEOTERMICA</a></li>
 				<li><a href="Ondas.html">ONDAS</a></li>
-				<li><a href="Formulario.html">FORMULARIO</a></li>
+				<li><a class="active" href="Formulario.html">FORMULARIO</a></li>
 				<li><a href="app.html">APP</a></li>
 			</ul>
 		</div>
