--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -61,7 +61,7 @@
 			<li><a href="Eolica.html">EOLICA</a></li>
 			<li><a href="Biomassa.html">BIOMASSA</a></li>
 			<li><a href="Hidrogenio.html">HIDROGENIO</a></li>
-			<li><a href="Geotermica.html">GEOTERMICA</a></li>
+			<li><a class="active" href="Geotermica.html">GEOTERMICA</a></li>
 			<li><a href="Ondas.html">ONDAS</a></li>
 			<li><a href="Formulario.html">FORMULARIO</a></li>
 			<li><a href="app.html">APP</a></li>
