--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -101,6 +101,10 @@
 	</div>
 
 	<footer>
+		<img id="logoFooter" src="Imagem/Energy_logo.png">
+		<p class="copy">
+				© Copyright MahaloEntertainment
+		</p>
 	</footer>
 
 
