arrumando as margins
vamo q vamo

--- a/SiteEnergiaR/WebContent/Ondas.html
+++ b/SiteEnergiaR/WebContent/Ondas.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<title>Pagina Inicial</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="CSS/MenuHF.css">
 		<link rel="stylesheet" href="CSS/Paginas.css">
+
 
 	</head>
 
@@ -50,7 +52,7 @@
 		</div>
 
 	<div class="logo">
-		<img src="Imagem/Energy_logo.png">
+		
 		<ul>
 			<li><a href="Home.html">HOME</a></li>
 			<li><a href="Solar.html">SOLAR</a></li>
