--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -68,37 +68,107 @@
 		</ul>
 	</div>
 
+	<h1><center>Energia Solar</center></h1>
 
-
-	<div  class="trocaCor">
-		<div class="img_home">
-			<img src="Imagem/Solar_home.png" alt="Solar_Desenho_Home">
-			<p>
-					<b>Energia Solar:</b>
-			</p>
-			<p>
-					Uma das formas de geração de energia renovavel é a utlização na energia solar, que funciona através da conversão da energia solar em energia elétrica, através de placas que são feitas de semicondutores	como o silicio e são chamadas de células fotovoltaicas.
-			</p>
-		</div>
+	<div  class="div1_home">
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
+		<p class="b1">
+			<b>
+				Definição:
+			</b>
+		</p>
+		<p class="a1">
+			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
+			é a energia gerada pelo calor proveniente do interior da terra.
+		</p>
 	</div>
 
 
-	<div class="trocaCor2">
-		<div class="texto1">
-		<p><b>Energia Ondomotriz:</b></p>
-		<p>É a energia das ondas</p>
+	<div class="div2_home">
+		<h1 style="margin-left:-60px;"><center>Energia Eólica</center></h1>
+
+		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
+		<p class="b1">
+			<b>
+				Usinas Geotérmicas:
+			</b>
+		</p>
+		<p class="a1">
+			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
+			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
+			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
+			geradores de turbina, produzindo assim, a eletricidade.
+		</p>
 	</div>
+
+	<h1>Energia da Biomassa</h1>
+	<div  class="div1_home">
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
+		<p class="b1">
+			<b>
+				Definição:
+			</b>
+		</p>
+		<p class="a1">
+			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
+			é a energia gerada pelo calor proveniente do interior da terra.
+		</p>
 	</div>
 
-	<div class="trocaCor">
+	<div class="div2_home">
+		<h1><center>Energia do Hidrogenio</center></h1>
 
+		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
+		<p class="b1">
+			<b>
+				Usinas Geotérmicas:
+			</b>
+		</p>
+		<p class="a1">
+			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
+			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
+			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
+			geradores de turbina, produzindo assim, a eletricidade.
+		</p>
+	</div>
 
-
+	<h1>Energia Geotermica</h1>
+	<div  class="div1_home">
+		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
+		<p class="b1">
+			<b>
+				Definição:
+			</b>
+		</p>
+		<p class="a1">
+			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
+			é a energia gerada pelo calor proveniente do interior da terra.
+		</p>
 	</div>
 
 	<div class="trocaCor3">
+		<h1><center>Energia das Ondas</center></h1>
 
+		<img id="Geotermica_2" src="Imagem\Geotermica_2.png" alt="Usina_Geotermica">
+		<p class="b1">
+			<b>
+				Usinas Geotérmicas:
+			</b>
+		</p>
+		<p class="a1">
+			Chamadas também de centrais geotérmicas são os locais de produção desse tipo de energia,<br>
+			sendo implantada próxima aos locais onde há grande quantidade de vapor e água quente,<br>
+			sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
+			geradores de turbina, produzindo assim, a eletricidade.
+		</p>
 	</div>
+
+
+
+
+
+
+
 
 	<footer>
 		<img id="logoFooter" src="Imagem/Energy_logo.png">
