tenho um micropenis

--- a/SiteEnergiaR/WebContent/Geotermica.html
+++ b/SiteEnergiaR/WebContent/Geotermica.html
@@ -124,7 +124,7 @@
 		<img id="Geotermica_3" src="Imagem\Geotermica_3.png" alt="Formas_EnergiaGeo">
 		<p class="b1">
 			<b>
-				Formas da energia Geométrica:
+				Formas da energia Geotérmica:
 			</b>
 		</p>
 		<p class="a1">
@@ -189,6 +189,7 @@
 	</div>
 
 	<footer>
+		
 	</footer>
 
 	<script>
