--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -171,9 +171,11 @@
 
 
 	<footer>
-		<img id="logoFooter" src="Imagem/Energy_logo.png">
+		<img id="logoFooter" src="Imagem/logoFooter.png">
 		<p class="copy">
-				© Copyright MahaloEntertainment
+			Rua Cerejeira, 82 Jardim Capivari - Campinas - São Paulo - SP - Brasil<br>
+			Cia. MahaloEntertainment Soluçoes de Informática<br>
+			Copyright2019
 		</p>
 	</footer>
 
