--- a/SiteEnergiaR/WebContent/Home.html
+++ b/SiteEnergiaR/WebContent/Home.html
@@ -170,7 +170,7 @@
 		sendo assim, os reservatórios geotérmicos fornecem a energia necessária para alimentar os<br>
 		geradores de turbina, produzindo assim, a eletricidade.
 		<br>
-		<img class="Botao_Home1" src="Imagem\Botao_Home.png" alt="Energia_Solar_botão">
+		<img class="Botao_Home2" src="Imagem\Botao_Home.png" alt="Energia_Solar_botão" href="Ondas.html">>
 	</p>
 </div>
 
