deus sou eu mais uma vez
help me!

--- a/SiteEnergiaR/WebContent/app.html
+++ b/SiteEnergiaR/WebContent/app.html
@@ -1,13 +1,12 @@
 <DOCTYPE html>
   <html charset="UTF-8">
   	<head lang="pt-br">
-  		<title>Energia Hidrogênio</title>
-  		<link rel="stylesheet" href="CSS/AppHF.css">
+  		<title>Brain Energy</title>
+  		<link rel="stylesheet" href="CSS/Paginas.css">
   		<link rel="stylesheet" href="CSS/MenuHF.css">
 
   	</head>
   	<body>
-
 
       <!-- Slide Show -->
   		<div class="slideshow-container">
@@ -66,26 +65,50 @@
   			</ul>
   		</div>
   		<!-- Divisão em Branco - topo app-->
-  		<h1><center>Teste seu conhecimento com nosso aplicativo</center></h1>
+      
+  <div class="fundo">
+    <div class="appIntroducao">
+      <h1 class="titulo"><center>Brain Energy</center></h1>
 
-      <div  class="trocaCor">
+        <img id="brain" src="Imagem/hello.png" alt="brain">
+        <h3 class="subTitulo">Teste seu conhecimento com nosso aplicativo</h3>
+        <p class="subTexto">São cinco jogos desafiadores com temas abordados em nossa plataforma web.
+           Baixe-o e jogue gratuitamente!</p>
+    </div>
 
+    <div class="listaJogos">
+      <div class="app1">
+        <img id="game1" src="Imagem/quebra-cabreça.png" alt="game1">
+        <h4 class="luzTextDir">Quebra cabeça</h4>
+        <p class="luzTextsubDir">Relacione as imagens das energias renovaveis com seus respectivo ponto de coleta.</p>
       </div>
 
-      <div class="trocaCor2">
-
+      <div class="app2">
+        <img id="game2" src="Imagem/forca.png" alt="game2">
+        <h4 class="luztextEsq">Forca renovável</h4>
+        <p class="luztextsubEsq">Analise a imagem e descreva o nome correto, de acordo com as letras disponiveis.</p>
       </div>
 
-      <div class="trocaCor1">
-
+      <div class="app1">
+        <img id="game1" src="Imagem/aperte-fala.png" alt="game3">
+        <h4 class="luzTextDir">Fale se puder</h4>
+        <p class="luzTextsubDir">Fale a palavra correta!</p>
       </div>
 
-      <div class="trocaCor4">
+      <div class="app2">
+        <img id="game2" src="Imagem/alternativa.png" alt="game4">
+        <h4 class="luztextEsq">Alternativa</h4>
+        <p class="luztextsubEsq">Conecte todas as linhas  e encontre o caminho para próxima fase</p>
       </div>
 
-      <div class="trocaCor3">
-
+      <div class="app1">
+        <img id="game1" src="Imagem/verdade-falso.png" alt="game5">
+        <h4 class="luzTextDir">Verdadeiro ou falso</h4>
+        <p class="luzTextsubDir">Utilize o que foi visto no site para selecionar a resposta correta</p>
       </div>
+
+    </div>
+  </div>
 
       <footer>
       </footer>
