--- a/SiteEnergiaR/WebContent/Eolica.html
+++ b/SiteEnergiaR/WebContent/Eolica.html
@@ -5,7 +5,7 @@
 
 		<link rel="stylesheet" href="CSS/MenuHF.css">
 		<link rel="stylesheet" href="CSS/Paginas.css">
-		
+
 	</head>
 
 	<body>
@@ -67,31 +67,110 @@
 		</ul>
 	</div>
 
-	<h1><center>Energia Geotérmica</center></h1>
+	<h1><center>Energia Eólica</center></h1>
 
 	<div  class="trocaCor">
-		<img id="Geotermica_1" src="Imagem\Geotermica_1.png" alt="Energia_Geotermica">
+		<img id="Geotermica_1" src="Imagem\moinho_vento.png" alt="Energia_Geotermica">
+
+		<p class="b1"><b>Introdução:</b></p>
+
+		<p>
+		A energia eólica é conhecida pelo homem a mais de 3000 anos, em que em algumas civilizações antigas os cata-ventos era utilizados para moer grãos, bombear água e	transportar mercadorias em barcos a vela.</br>
+		No entanto ela só foi associada com a eletricidade somente quando ocorreu o surgimento dessa, por volta do final do século XIX.
+		</p>
+		<p>
+		Desde então esse tipo de energia tem crescido cada vez mais, sendo o Brasil o quarto país no mundo que a energia eólica mais cresce, mesmo ainda representando apenas 8% da matriz energética do Brasil.</br>
+		Desde então ela tem se disseminado gradativamente por	todos os países do mundo principalmente pelos desenvolvidos que tem mais recursos para estar implementado a construção de parques eólicos.
+		</p>
+	</div>
+
+
+	<div class="div2Eolica">
+		<img id="Eolica1" src="Imagem\torre_girando.gif" alt="Usina_Geotermica">
 		<p class="b1">
 			<b>
 				Definição:
 			</b>
 		</p>
 		<p class="a1">
-			A Energia Geotérmica “geo” significa Terra, e “therme” correspondente à temperatura,<br>
-			é a energia gerada pelo calor proveniente do interior da terra.
+			A energia eólica, é fornecida pela ação do vento em torres eólicas que transforma esse tipo de energia em eletricidade.
 		</p>
 		<p class="b1">
 			<b>
-				Funcionamento:
+				O Brasil:
 			</b>
 		</p>
 		<p class="a1">
-			O processo de aproveitamento dessa energia é feito por grandes perfurações no solo,<br>
-			visto o calor existente abaixo da superfície terrestre, esse tipo de recurso energético<br>
-			é obtido por meio das rochas quentes (secas e úmidas) e o vapor quente proveniente do<br>
-			interior da terra. Considerado uma fonte renovável e limpa produz baixo impacto ambiental.
+			O Brasil é um país que tem um grande potencial quando se trata da questão de energias sustentáveis, dentre elas está presente a energia eólica. Essa energia assim como a solar não fornece poluentes para
+			o meio ambiente garantindo assim a sua sustentabilidade.</br>
+		</p>
+		<p class="a1">
+			Nesse quesito o Brasil possui o maior parque eólico	da América Latina que está localizado no municípios Baianos de Caetité, Guanambi e Igaporã, nomeado de alto sertão com capacidade de gerar cerca de 300 megawatts.
 		</p>
 	</div>
+
+	<div  class="div3Eolica">
+		<img id="Geotermica_1" src="Imagem\esquema_eolica.jpg" alt="Energia_Geotermica">
+
+		<p class="b1"><b>Como funciona a energia eólica?</b></p>
+
+		<p>
+			Ela é obtida por meio da transformação que ocorre nos aerogeradores que convertem a força do vento que movimenta
+			as hélices (energia cinética) em energia elétrica.</br>
+		</p>
+		<p>
+			Os aerogeradores são dispostos em zonas que passam uma grande quantidade de vento, ou seja, antes
+			mesmo de se instalar uma torre eólica é realizado todo um estudo para ver se a região atende os requisitos para gerar a enegia dos ventos.
+		</p>
+	</div>
+
+	<div class="div4Eolica">
+		<p class="b1"><b>Parque eólico Alto Sertão:</b></p>
+
+		<p class="a1">
+			<p>
+				O complexo de parques eólicos alto sertão é o nome dado aos parques eólicos que se localizam na região da cidade de caetite na Bahia.
+				Sendo que nessa região tem o maior complexo de parques eólicos da américa latina, estando dipostos nas cidades de Caetitie, Guanambi, Igapora e Pindai.</br>
+			</p>
+
+			<p>
+			Junto os complexos de alto sertão I e II possuem uma capacidade de gerar 680,5 megawatts. A rede de parques eólicos do alto sertão contam com 14 parques nesses municípios com 184 aerogeradores e uma capacidade
+			para gerar 294,4 megawatts.
+			Somente com essa capacidade já se tornava o maior da américa latina, com um custo de 1,2 bilhão de reais, com essa capacidade já seria possível abastecer uma cidade com 530 mil casas.
+			</p>
+
+		</p>
+
+		<p class="b1"><b>Parque eólico de Osório:</b></p>
+
+		<p>
+			O parque eólico de osorio era o maior da américa latina , essa posição foi domada dele após a inauguração do complexo de parques eólicos do alto sertão na Bahia, mas ainda sim ele continua sendo um dos maiores
+			parques fornecedores de energia eólica do Brasil.
+		</p>
+
+		<p>
+		 O parque conta com 75 torres com 98 metros de altura atingindo 135 metros de altura com as pás dos aerogeradores.</br>
+		 Ele está dividido em três parques: osorio, índios e sangradouro com uma capacidade de gerar 150 megawatts, capaz de abastecer anualmente o consumo de cerca de 650 mil pessoas.
+		</p>
+
+
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
